manifest/base/bhasai/orchestrator/deployment-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: orchestrator
  name: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: orchestrator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: orchestrator
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: orchestrator
          image: ghcr.io/bharatsahaiyak/orchestrator:scaling
          imagePullPolicy: Always
          name: orchestrator
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            # limits:
            #   memory: "512Mi"
            #   cpu: "1"
      restartPolicy: Always
