manifest/base/bhasai/orchestrator/service-orchestrator.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector:
    app.kubernetes.io/name: orchestrator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
