manifest/base/bhasai/orchestrator/ingress-orchestrator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "orchestrator.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: orchestrator
            port:
              number: 80
---
